[tool.poetry]
name = "twitterplaylist"
version = "0.1.0"
description = "A Twitter bot that creates a Spotify playlist based on a daily twitter thread"
authors = ["Alex Oladele <dragid10@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # This is the minimum version of Python required to run the project
loguru = "^0.6.0" # https://pypi.org/project/loguru/
python-decouple = "^3.6"  # https://pypi.org/project/python-decouple/
python-dotenv = "^0.20.0"  # https://pypi.org/project/python-dotenv/
tweepy = "^4.10.0"  # https://pypi.org/project/tweepy/
spotipy = "^2.20.0"  # https://pypi.org/project/spotipy/
APScheduler = "^3.9.1"  # https://pypi.org/project/APScheduler/
pymongo = {extras = ["srv"], version = "^4.2.0"}
spotify-token = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"  # https://pypi.org/project/pytest/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"